# flusso

./: .dockerignore  .gitignore  .taplo.toml  CLAUDE.md  CLIENT.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  RELEASING.md  ROADMAP.md  SCHEMA.md  SECURITY.md  SOURCES_AND_SINKS.md  default_16556134682458448644_0_3424.profraw  dist-workspace.toml  docker-compose.demo.yml  docker-compose.yml  justfile  release-plz.toml  rust-toolchain.toml
apps/cli/: CHANGELOG.md  Cargo.toml  README.md
apps/cli/src/: backends.rs  build.rs  check.rs  http.rs  main.rs  metrics.rs  observer.rs  print.rs  run.rs  schema_cmd.rs  telemetry.rs
apps/cli/src/commands/: admin.rs  build.rs  check.rs  design.rs  mod.rs  print.rs  run.rs  schema_cmd.rs
apps/cli/src/http/: auth.rs  mod.rs
apps/cli/src/telemetry/: metrics.rs  mod.rs  observer.rs
apps/client/: Cargo.toml
apps/client/src/: client.rs  handles.rs  lib.rs  query.rs  search.rs  tests.rs
apps/design/: CHANGELOG.md  Cargo.toml  README.md  default_14889449798012485412_0_56191.profraw  default_14889449798012485412_0_56192.profraw  default_14889449798012485412_0_56200.profraw  default_14889449798012485412_0_63865.profraw  default_14889449798012485412_0_63866.profraw  default_14889449798012485412_0_63872.profraw  default_18411267723022987915_0_15012.profraw  default_18411267723022987915_0_15013.profraw  default_18411267723022987915_0_15014.profraw  default_18411267723022987915_0_15015.profraw  default_18411267723022987915_0_15016.profraw  default_18411267723022987915_0_15017.profraw  default_18411267723022987915_0_15018.profraw  default_18411267723022987915_0_15019.profraw  default_18411267723022987915_0_15020.profraw  default_18411267723022987915_0_15021.profraw  default_18411267723022987915_0_15022.profraw  default_18411267723022987915_0_15023.profraw  default_18411267723022987915_0_15024.profraw  default_18411267723022987915_0_16028.profraw  default_18411267723022987915_0_16029.profraw  default_18411267723022987915_0_16030.profraw  default_18411267723022987915_0_16031.profraw  default_18411267723022987915_0_16032.profraw  default_18411267723022987915_0_16033.profraw  default_18411267723022987915_0_16034.profraw  default_18411267723022987915_0_16035.profraw  default_18411267723022987915_0_16036.profraw  default_18411267723022987915_0_16037.profraw  default_18411267723022987915_0_16038.profraw  default_18411267723022987915_0_16039.profraw  default_18411267723022987915_0_16040.profraw  default_18411267723022987915_0_44106.profraw  default_18411267723022987915_0_44107.profraw  default_18411267723022987915_0_44108.profraw  default_18411267723022987915_0_44109.profraw  default_18411267723022987915_0_44110.profraw  (+31 more)
apps/design/frontend/: .gitignore  default_16556134682458448644_0_46816.profraw  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/design/frontend/e2e/: designer.spec.ts  paths.ts  pipeline.spec.ts  server.mjs
apps/design/frontend/scripts/: check-i18n.mjs
apps/design/frontend/src/: App.tsx  api.ts  fields.ts  history.ts  i18n.tsx  index.css  main.tsx  router.ts  state.tsx  styles.css  styles.ts  theme.ts
apps/design/src/: api.rs  assets.rs  codegen.rs  lib.rs  preview.rs  server.rs
apps/design/tests/: api.rs  roundtrip.proptest-regressions  roundtrip.rs
apps/query/: CHANGELOG.md  Cargo.toml  README.md
apps/query-derive/: CHANGELOG.md  Cargo.toml  README.md
apps/query-derive/src/: doc.rs  lib.rs  map.rs  multi.rs  resolve.rs  value.rs
apps/query-derive/tests/: derive.rs  ui_no_subfields.rs
apps/query-derive/tests/fixtures/: flusso.toml  no_subfields.toml  products.schema.yml  users.schema.yml
apps/query-derive/tests/ui/: geo_not_sortable.rs  geo_not_sortable.stderr  map_key_not_sortable.rs  map_key_not_sortable.stderr  map_missing_derive.rs  map_missing_derive.stderr  missing_index.rs  (+29 more)
apps/query/src/: client.rs  error.rs  lib.rs  msearch.rs  multi.rs  path.rs  query.rs  search.rs  tests.rs
apps/query/tests/: combined_search.rs
apps/search/: Cargo.toml
apps/search-derive/: Cargo.toml
apps/search-derive/src/: doc.rs  lib.rs  multi.rs  resolve.rs  value.rs
apps/search-derive/tests/: derive.rs  ui.rs
apps/search/src/: client.rs  error.rs  handles.rs  lib.rs  msearch.rs  multi.rs  query.rs  search.rs  tests.rs
dev/search-api/: Cargo.toml  README.md
dev/search-api/src/: error.rs  global.rs  main.rs  orders.rs  products.rs  response.rs  users.rs
libs/0-core/: CHANGELOG.md  Cargo.toml  README.md
libs/0-core/src/: common.rs  config.rs  lib.rs
libs/0-schema/: Cargo.toml
libs/0-schema/0-core/: Cargo.toml
libs/0-schema/1-config-toml/: Cargo.toml
libs/0-schema/1-index-yaml/: Cargo.toml
libs/0-schema/src/: common.rs  compiled.rs  config.rs  files.rs  lib.rs  loader.rs
libs/0-schema/tests/: branch.schema.yml  config.toml  schema_drift.rs  test.rs
libs/1-queue/0-core/: CHANGELOG.md  Cargo.toml  README.md
libs/1-queue/1-channel/: CHANGELOG.md  Cargo.toml  README.md
libs/1-sinks/0-core/: CHANGELOG.md  Cargo.toml  README.md
libs/1-sinks/1-stdout/: CHANGELOG.md  Cargo.toml  README.md
libs/1-sinks/2-opensearch/: CHANGELOG.md  Cargo.toml  README.md
libs/1-sources/0-core/: CHANGELOG.md  Cargo.toml  README.md
libs/1-sources/1-postgres/: CHANGELOG.md  Cargo.toml  README.md
libs/2-engine/: CHANGELOG.md  Cargo.toml  README.md
libs/2-engine/benches/: pipeline.rs
libs/2-engine/src/: error.rs  lib.rs  observer.rs  pipeline.rs  policy.rs  tests.rs
libs/2-engine/tests/: pipeline.rs  wal.rs
libs/2-schema/: CHANGELOG.md  Cargo.toml  README.md
libs/2-schema/1-config-toml/: CHANGELOG.md  Cargo.toml  README.md  config.schema.json
libs/2-schema/1-index-yaml/: CHANGELOG.md  Cargo.toml  README.md  index.schema.yml
libs/2-schema/src/: compiled.rs  deployment.rs  lib.rs  loader.rs
libs/2-schema/tests/: config_toml.rs  schema_drift.rs  test.rs
libs/3-daemon/: CHANGELOG.md  Cargo.toml  README.md
libs/3-daemon/src/: backends.rs  build.rs  lag.rs  lib.rs  observer.rs  status.rs  tests.rs
(+369 files in other folders)
