[workspace]
members = [
  "libs/0-core",
  "libs/2-schema",
  "libs/2-schema/1-config-toml",
  "libs/2-schema/1-index-yaml",
  "libs/1-queue/0-core",
  "libs/1-queue/1-channel",
  "libs/1-sinks/0-core",
  "libs/1-sinks/1-stdout",
  "libs/1-sinks/2-opensearch",
  "libs/1-sources/0-core",
  "libs/1-sources/1-postgres",
  "libs/2-engine",
  "libs/3-daemon",
  "apps/*",
  "dev/search-api",
]
default-members = ["apps/cli"]
resolver = "3"

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/alias2k/flusso"
homepage = "https://github.com/alias2k/flusso"
authors = ["Alias2k"]
description = "Keep OpenSearch in sync with Postgres from declarative config."
keywords = ["postgres", "opensearch", "cdc", "search", "replication"]
categories = ["database", "command-line-utilities"]
readme = "README.md"

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
debug = 2

[profile.dev.package."*"]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
# Turn ALL warnings from rustc into errors.
warnings = "deny"

# Forbid unsafe code unless explicitly allowed at the module/fn level.
unsafe_code = "deny"

# Enforce that all public types implement Debug.
# This is invaluable for your Jaeger tracing setup.
missing_debug_implementations = "deny"

# Enforce standard Rust naming conventions.
non_snake_case = "deny"
non_camel_case_types = "deny"
non_upper_case_globals = "deny"
# Find code that can never be reached.
unreachable_patterns = "deny"
unreachable_pub = "deny"
# Find unused variables, imports, etc.
unused_variables = "deny"
unused_imports = "deny"
unused_mut = "deny"
# Find unused imports
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# Instead, we'll deny the 'recommended' set and add specific high-impact lints.
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

# Forbid .unwrap() and force proper Result handling.
unwrap_used = "deny"
# Forbid .expect() as well. Panics are not enterprise-grade error handling.
expect_used = "deny"

# Force devs to use your 'tracing' stack instead of println!.
print_stdout = "deny"
print_stderr = "deny"

# Prevent indexing operations that could panic.
indexing_slicing = "deny"

# Prefer `is_empty()` over `len() == 0`.
len_zero = "deny"
# Enforce writing `match` statements in a clearer way.
match_bool = "deny"
iter_next_slice = "allow"

[workspace.dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = { version = "0.9.*" }
thiserror = { version = "2.0.*" }
anyhow = { version = "1.0.*", features = ["backtrace"] }
toml = { version = "1.1.*", features = ["preserve_order"] }
nutype = { version = "0.7.*", features = ["serde", "regex"] }
regex = { version = "1.12.*" }
bon = { version = "3.*" }
rust_decimal = { version = "1.*", features = ["serde-with-str"] }
pgwire-replication = { version = "0.3.*", features = ["md5"] }
async-trait = { version = "0.1.*" }
rmp-serde = { version = "1.*" }
futures = { version = "0.3.*" }
tracing = { version = "0.1.*" }
tokio = { version = "1.*", default-features = false }
clap = { version = "4.*", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.*", features = ["env-filter", "json"] }
url = { version = "2.*" }
sqlx = { version = "0.9.*", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "rust_decimal",
  "chrono",
  "uuid",
  "json",
] }
chrono = { version = "0.4.*", default-features = false, features = ["std", "serde"] }
uuid = { version = "1.*", features = ["serde"] }
serde_json = { version = "1.*" }
# Our HTTP client stays on 0.12. The OTLP exporter pulls its own reqwest 0.13
# transitively; deduping would force a 0.13 TLS-feature migration (rustls-tls →
# rustls + a crypto provider) that risks colliding with sqlx's rustls provider,
# so it's a deliberate separate change, not a version bump.
reqwest = { version = "0.12.*", default-features = false }
testcontainers-modules = { version = "0.15.*" }
criterion = { version = "0.8.*", features = ["async_tokio"] }
proptest = { version = "1.*" }
axum = { version = "0.8.*" }
base64 = "0.22"
# OpenTelemetry stack, shared by the CLI (traces) and the daemon (metrics).
# Per-crate feature sets differ and are added at the use site; Cargo unifies
# them. Keep these versions in lockstep — the otel crates release together.
opentelemetry = { version = "0.32.*" }
opentelemetry_sdk = { version = "0.32.*" }
opentelemetry-otlp = { version = "0.32.*" }
opentelemetry-prometheus = { version = "0.32.*" }
tracing-opentelemetry = { version = "0.33.*" }
prometheus = { version = "0.14.*" }

schema = { path = "libs/2-schema", version = "0.8.0", package = "flusso-schema" }
schema-core = { path = "libs/0-core", version = "0.8.0", package = "flusso-schema-core" }
schema-config-toml = { path = "libs/2-schema/1-config-toml", version = "0.8.0", package = "flusso-schema-config-toml" }
schema-index-yaml = { path = "libs/2-schema/1-index-yaml", version = "0.8.0", package = "flusso-schema-index-yaml" }

engine = { path = "libs/2-engine", version = "0.8.0", package = "flusso-engine" }
daemon = { path = "libs/3-daemon", version = "0.8.0", package = "flusso-daemon" }

sources-core = { path = "libs/1-sources/0-core", version = "0.8.0", package = "flusso-sources-core" }
sources-postgres = { path = "libs/1-sources/1-postgres", version = "0.8.0", package = "flusso-sources-postgres" }

sinks-core = { path = "libs/1-sinks/0-core", version = "0.8.0", package = "flusso-sinks-core" }
sinks-stdout = { path = "libs/1-sinks/1-stdout", version = "0.8.0", package = "flusso-sinks-stdout" }
sinks-opensearch = { path = "libs/1-sinks/2-opensearch", version = "0.8.0", package = "flusso-sinks-opensearch" }

queue-core = { path = "libs/1-queue/0-core", version = "0.8.0", package = "flusso-queue-core" }
queue-channel = { path = "libs/1-queue/1-channel", version = "0.8.0", package = "flusso-queue-channel" }
