[package]
name = "flusso-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "flusso_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
