[package]
name = "flusso-query-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
schema = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
# The runtime, with the derive re-exported — the real consumer surface. (A
# dev-dependency cycle, which Cargo allows.)
flusso-query = { path = "../query", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
trybuild = "1"
