[package]
name = "flusso-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-neutral OpenSearch/Elasticsearch query client for flusso indexes."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "flusso_query"
path = "src/lib.rs"

[lints]
workspace = true

[features]
# Re-export the `#[derive(FlussoDocument)]` proc-macro (serde/serde_derive pattern).
derive = ["dep:flusso-query-derive"]
# Make `rust_decimal::Decimal` / `chrono` available for `decimal` / `date` fields.
decimal = ["dep:rust_decimal"]
chrono = ["dep:chrono"]
# Make `uuid::Uuid` a valid `keyword` value (id / foreign-key fields).
uuid = ["dep:uuid"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
flusso-query-derive = { path = "../query-derive", version = "0.10.1", optional = true }
rust_decimal = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = { workspace = true, features = ["derive"] }
# The combined-search e2e (`tests/combined_search.rs`) drives the real
# OpenSearch sink to build generation-named indexes + their hash aliases, then
# queries through this crate — guarding the sink↔query naming contract.
schema-core.workspace = true
sinks-core.workspace = true
sinks-opensearch.workspace = true
testcontainers-modules = { workspace = true, features = ["http_wait"] }
