[package]
name = "flusso-dev-search-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "search-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# The typed query client + the derive, resolved against ../flusso.toml.
flusso-search = { path = "../../apps/search", features = ["derive"] }
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
