[package]
name = "flusso-dev-search-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Development example: an axum search API consuming a flusso index."
publish = false

[[bin]]
name = "search-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# The typed query client + the derive, resolved against ../flusso.toml.
flusso-query = { path = "../../apps/query", features = ["derive", "decimal"] }
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
