[package]
name = "flusso-schema-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain vocabulary for flusso: values, validated newtypes, and index mappings."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "schema_core"

[lints]
workspace = true

[dependencies]
serde.workspace = true
nutype.workspace = true
regex.workspace = true
bon.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
