[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
schema-core.workspace = true
schema-config-toml.workspace = true
schema-index-yaml.workspace = true
thiserror.workspace = true
serde.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
