[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
sources-core.workspace = true
sinks-core.workspace = true
queue-core.workspace = true
queue-channel.workspace = true
schema-core.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
# Concrete source + sink, exercised together only here — the engine is the one
# component that legitimately spans both halves of the pipeline.
sources-postgres.workspace = true
sinks-opensearch.workspace = true
sqlx.workspace = true
rust_decimal.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres", "http_wait"] }
criterion.workspace = true

# Full pipeline benchmark: real Postgres -> the engine -> real OpenSearch.
# The backfill scenario drives the real `Engine::run()`. Spins up both
# containers, so requires Docker. Run with `cargo bench`.
[[bench]]
name = "pipeline"
harness = false
