[package]
name = "flusso-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config and schema loading for flusso: assembles flusso.toml and *.schema.yml into a validated Config."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "schema"

[lints]
workspace = true

[dependencies]
schema-core.workspace = true
schema-config-toml.workspace = true
schema-index-yaml.workspace = true
thiserror.workspace = true
serde.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
