[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
schema.workspace = true
schema-core.workspace = true
engine.workspace = true
sources-core.workspace = true
sources-postgres.workspace = true
sinks-core.workspace = true
sinks-stdout.workspace = true
sinks-opensearch.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
