[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
schema.workspace = true
schema-core.workspace = true
engine.workspace = true
sources-core.workspace = true
sinks-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
serde_json.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
