[package]
name = "flusso-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon that assembles and runs the flusso pipeline from a Config."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "daemon"

[lints]
workspace = true

[dependencies]
schema.workspace = true
schema-core.workspace = true
engine.workspace = true
sources-core.workspace = true
sinks-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[dev-dependencies]
serde_json.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
