[package]
name = "flusso-queue-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Queue abstraction for the flusso change-processing pipeline."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "queue_core"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
