[package]
name = "flusso-queue-channel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-process channel queue implementation for flusso."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "queue_channel"

[lints]
workspace = true

[dependencies]
queue-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
