[package]
name = "flusso-sinks-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sink trait, JSON rendering, and fan-out for flusso."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "sinks_core"

[lints]
workspace = true

[dependencies]
schema-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
