[package]
name = "sinks-stdout"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
sinks-core.workspace = true
schema-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["clock"] }

[dev-dependencies]
futures.workspace = true
