[package]
name = "flusso-sinks-stdout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "stdout sink for flusso, for debugging and development."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "sinks_stdout"

[lints]
workspace = true

[dependencies]
sinks-core.workspace = true
schema-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["clock"] }

[dev-dependencies]
futures.workspace = true
