[package]
name = "sinks-opensearch"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
sinks-core.workspace = true
schema-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
reqwest = { version = "0.12.*", default-features = false, features = ["json", "rustls-tls"] }

