[package]
name = "flusso-sources-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Change-capture and document-builder abstractions for flusso sources."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]
readme.workspace = true

[lib]
name = "sources_core"

[lints]
workspace = true

[dependencies]
schema-core.workspace = true
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
